--- a/index.html
+++ b/index.html
@@ -129,13 +129,16 @@
 <div id="nextTaskOverlay" style="position:fixed; inset:0; z-index:3500; background:linear-gradient(180deg, rgba(3,76,168,.55), rgba(0,0,0,.55)); display:none;">
   <div class="card" style="
     position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);
-    width:min(820px,92vw); padding:18px;">
+    width:min(820px,92vw); padding:18px; text-align:center;">
     <div class="chip" id="nextChip">Siguiente tarea</div>
     <div id="nextTitle" style="margin-top:10px;font-weight:1000;font-size:20px;color:var(--brand);"></div>
 
-    <div style="margin-top:10px;border:1px solid var(--border);border-radius:16px;padding:14px;background:#fbfcfe;">
+    <div style="margin-top:10px;border:1px solid var(--border);border-radius:16px;padding:14px;background:#fbfcfe; text-align:left;">
       <div id="nextGoal" style="color:#111;font-size:13px;"></div>
       <div id="nextInfo" style="margin-top:8px;color:#555;line-height:1.45;font-size:13px;"></div>
+      <div id="nextRoute" style="margin-top:10px;color:#333;font-size:12px;">
+        <b>Ruta objetivo:</b> <code></code>
+      </div>
     </div>
 
     <div style="display:flex;justify-content:center;margin-top:16px;">
@@ -144,7 +147,7 @@
       </button>
     </div>
 
-    <div style="margin-top:12px;color:#666;font-size:12px;text-align:center;">
+    <div style="margin-top:12px;color:#666;font-size:12px;">
       El cronómetro empezará cuando pulses “Comenzar tarea”.
     </div>
   </div>
@@ -169,7 +172,7 @@
   </div>
 </div>
 
-<!-- ===== Panel pequeño (control) ===== -->
+<!-- ===== Panel pequeño (control) — SOLO Pausa y No lo encuentro ===== -->
 <div id="abpanel" style="
   position:fixed; top:10px; right:10px; z-index:2000;
   background:#fff; border:1px solid var(--border); border-radius:12px;
@@ -196,21 +199,15 @@
 
   <div style="display:flex; gap:8px; margin-top:10px;">
     <button id="btnFailTask" class="btn btnGhost" style="flex:1;padding:10px 12px;">No lo encuentro</button>
-    <button id="btnDownloadXLS" class="btn btnGhost" style="flex:1;padding:10px 12px;">Descargar Excel</button>
-  </div>
-
-  <div style="display:flex; gap:8px; margin-top:8px;">
-    <button id="btnResetLog" class="btn btnGhost" style="flex:1;padding:10px 12px;">Borrar log</button>
-    <button id="btnRestartTasks" class="btn btnGhost" style="flex:1;padding:10px 12px;">Reiniciar tareas</button>
   </div>
 </div>
 
-<!-- ===== Cartel de tarea completada ===== -->
+<!-- ===== Cartel de tarea completada (con estado) ===== -->
 <div id="doneOverlay" style="position:fixed; inset:0; z-index:3000; display:none; background:rgba(0,0,0,.55);">
   <div class="card" style="
     position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);
     width:min(560px,92vw); padding:18px; text-align:center;">
-    <div style="font-weight:1000;font-size:18px;color:var(--brand);">✅ Tarea encontrada</div>
+    <div id="doneTitle" style="font-weight:1000;font-size:18px;color:var(--brand);">✅ Resultado</div>
     <div id="doneDetail" style="margin-top:8px;color:#333;font-size:13px; white-space:pre-line;"></div>
     <div id="doneTime" style="margin-top:10px;font-weight:1000;"></div>
 
@@ -249,10 +246,10 @@
   const OFFERS_ITEMS = [{ name:"Ofertas del momento" }, { name:"Más vendidos" }, { name:"Promociones" }];
 
   // ===================== TEST =====================
-  const VERSION = "FIN"; // A/B/FIN: identifica variante del menú
+  const VERSION = "FIN"; // A/B/FIN: identifica variante del menú (para A/B testing)
   const SESSION_ID = (crypto?.randomUUID) ? crypto.randomUUID() : String(Date.now()) + "_" + Math.random().toString(16).slice(2);
 
-  // ✅ EDITA AQUÍ LAS RUTAS EXACTAS
+  // ✅ EDITA AQUÍ LAS RUTAS EXACTAS (cada click se compara con el final de esta ruta)
   const TASKS = [
     {
       id:"camilla_electrica",
@@ -277,6 +274,9 @@
     }
   ];
 
+  // Umbral para marcar "correcta pero con desvíos"
+  const MAX_CLICKS_OK = 5;
+
   let taskIndex = 0;
   let TASK = null;
 
@@ -290,7 +290,8 @@
   let TASK_DONE = false;
 
   const EVENTS = [];
-  const TASK_RESULTS = {}; // {taskId:{status:'success'|'fail', timeMs:number}}
+  // TASK_RESULTS: { taskId: { status:'success'|'success_inefficient'|'fail', timeMs:number, clicks:number } }
+  const TASK_RESULTS = {};
 
   let TEST_STARTED = false;
   let TASK_ACTIVE = false;
@@ -352,9 +353,6 @@
     fillIntroTaskList();
     document.getElementById("taskIntroOverlay").style.display = "block";
   }
-  function hideMainIntro(){
-    document.getElementById("taskIntroOverlay").style.display = "none";
-  }
 
   function showNextTaskScreen(){
     TASK_ACTIVE = false;
@@ -366,8 +364,11 @@
     document.getElementById("nextTitle").textContent = `${taskIndex+1}/${TASKS.length} · ${TASK.label}`;
     document.getElementById("nextGoal").innerHTML = `<b>Qué buscar:</b> ${TASK.goal}`;
     document.getElementById("nextInfo").innerHTML = `<b>Info:</b> ${TASK.info}`;
+    document.querySelector("#nextRoute code").textContent = TASK.route.join(" > ");
+
     document.getElementById("nextTaskOverlay").style.display = "block";
   }
+
   function hideNextTaskScreen(){
     document.getElementById("nextTaskOverlay").style.display = "none";
   }
@@ -437,18 +438,24 @@
     return true;
   }
 
-  function showCompletedBanner(message){
+  function isInefficient(){
+    return CLICK_PATH.length > MAX_CLICKS_OK;
+  }
+
+  function showCompletedBanner(message, title="✅ Resultado"){
     hardPause();
-    confettiBurst();
+    confettiBurstSlow();
 
     const overlayEl = document.getElementById("doneOverlay");
+    const titleEl = document.getElementById("doneTitle");
     const detail = document.getElementById("doneDetail");
     const timeEl = document.getElementById("doneTime");
 
     const seconds = START_TS ? (effectiveElapsedMs()/1000).toFixed(1) : "";
     const routeStr = CLICK_PATH.join(" > ");
 
-    if (detail) detail.textContent = `${message}\nRuta: ${routeStr}`;
+    if (titleEl) titleEl.textContent = title;
+    if (detail) detail.textContent = `${message}\nRuta: ${routeStr}\nClicks: ${CLICK_PATH.length}`;
     if (timeEl) timeEl.textContent = seconds ? `Tiempo: ${seconds}s` : "";
     if (overlayEl) overlayEl.style.display = "block";
   }
@@ -487,17 +494,10 @@
     if (TIMER_INT) { clearInterval(TIMER_INT); TIMER_INT = null; }
     track("tasks_finished");
 
-    // Pantalla final mientras genera/descarga
     showFinalOverlay();
-
-    // Dejar respirar al render (y que se vea la pantalla) antes de generar el excel
     setTimeout(() => {
-      try {
-        downloadExcelAuto(); // dispara descarga
-      } finally {
-        // 2 ticks para dar tiempo al navegador a iniciar descarga
-        setTimeout(() => setFinalDownloadedState(), 350);
-      }
+      try { downloadExcelAuto(); }
+      finally { setTimeout(() => setFinalDownloadedState(), 350); }
     }, 50);
   }
 
@@ -506,10 +506,10 @@
     TASK_DONE = true;
 
     const tms = effectiveElapsedMs();
-    TASK_RESULTS[TASK.id] = { status:"fail", timeMs:tms };
+    TASK_RESULTS[TASK.id] = { status:"fail", timeMs:tms, clicks: CLICK_PATH.length };
     track("task_fail", { path: CLICK_PATH.join(" > ") });
 
-    showCompletedBanner("❌ Marcada como 'No lo encuentro'");
+    showCompletedBanner("❌ Marcada como 'No lo encuentro'", "❌ Tarea no encontrada");
   }
 
   // ===================== Excel (XML .xls con pestañas) =====================
@@ -543,16 +543,28 @@
     rowsSummary.push([{v:"Tiempo total (s)", style:"sHeader"},{v:(totalMs/1000).toFixed(1), style:"sCell"}]);
     rowsSummary.push([{v:"", style:"sCell"},{v:"", style:"sCell"}]);
 
-    rowsSummary.push([{v:"Tarea", style:"sHeader"},{v:"Resultado", style:"sHeader"},{v:"Tiempo (s)", style:"sHeader"}]);
+    rowsSummary.push([
+      {v:"Tarea", style:"sHeader"},
+      {v:"Resultado", style:"sHeader"},
+      {v:"Tiempo (s)", style:"sHeader"},
+      {v:"Clicks", style:"sHeader"},
+      {v:"Ruta objetivo", style:"sHeader"}
+    ]);
 
     TASKS.forEach(t => {
       const r = TASK_RESULTS[t.id];
-      const ok = r?.status === "success";
-      const styleRow = ok ? "sSuccess" : "sFail";
+      const status = r?.status || "fail";
+      const isSuccess = status === "success";
+      const isWarn = status === "success_inefficient";
+      const styleRow = isSuccess ? "sSuccess" : (isWarn ? "sWarn" : "sFail");
+      const labelRes = isSuccess ? "Encontrada" : (isWarn ? "Encontrada (con desvíos)" : "No encontrada");
+
       rowsSummary.push([
         {v:t.label, style:styleRow},
-        {v: ok ? "Encontrada" : "No encontrada", style:styleRow},
-        {v: r ? (r.timeMs/1000).toFixed(1) : "", style:styleRow}
+        {v:labelRes, style:styleRow},
+        {v: r ? (r.timeMs/1000).toFixed(1) : "", style:styleRow},
+        {v: r ? String(r.clicks ?? "") : "", style:styleRow},
+        {v: t.route.join(" > "), style:styleRow}
       ]);
     });
 
@@ -598,6 +610,16 @@
       <Border ss:Position="Top" ss:LineStyle="Continuous" ss:Weight="1" ss:Color="#CFE9D8"/>
     </Borders>
   </Style>
+  <Style ss:ID="sWarn">
+    <Interior ss:Color="#FFF7E6" ss:Pattern="Solid"/>
+    <Font ss:Bold="1" ss:Color="#8A4B00"/>
+    <Borders>
+      <Border ss:Position="Bottom" ss:LineStyle="Continuous" ss:Weight="1" ss:Color="#F3E2B8"/>
+      <Border ss:Position="Left" ss:LineStyle="Continuous" ss:Weight="1" ss:Color="#F3E2B8"/>
+      <Border ss:Position="Right" ss:LineStyle="Continuous" ss:Weight="1" ss:Color="#F3E2B8"/>
+      <Border ss:Position="Top" ss:LineStyle="Continuous" ss:Weight="1" ss:Color="#F3E2B8"/>
+    </Borders>
+  </Style>
   <Style ss:ID="sFail">
     <Interior ss:Color="#FDECEC" ss:Pattern="Solid"/>
     <Font ss:Bold="1" ss:Color="#B42318"/>
@@ -630,27 +652,27 @@
     URL.revokeObjectURL(a.href);
   }
 
-  // ===================== Confetti =====================
-  function confettiBurst(){
+  // ===================== Confetti (más lento) =====================
+  function confettiBurstSlow(){
     const canvas = document.getElementById("confettiCanvas");
     const ctx = canvas.getContext("2d");
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
     canvas.style.display = "block";
 
-    const N = 180;
+    const N = 200;
     const parts = [];
     for (let i=0;i<N;i++){
       parts.push({
-        x: canvas.width/2 + (Math.random()*120-60),
-        y: canvas.height/2 + (Math.random()*60-30),
-        vx: (Math.random()*10-5),
-        vy: (Math.random()*-12-6),
-        g: 0.35 + Math.random()*0.2,
-        s: 4 + Math.random()*4,
+        x: canvas.width/2 + (Math.random()*140-70),
+        y: canvas.height/2 + (Math.random()*70-35),
+        vx: (Math.random()*8-4),
+        vy: (Math.random()*-10-5),
+        g: 0.18 + Math.random()*0.15,   // ↓ gravedad más baja
+        s: 4 + Math.random()*5,
         r: Math.random()*Math.PI,
-        vr: (Math.random()*0.2-0.1),
-        life: 60 + Math.random()*40,
+        vr: (Math.random()*0.16-0.08),
+        life: 130 + Math.random()*80,   // ↑ vida más larga
         hue: Math.floor(Math.random()*360)
       });
     }
@@ -669,13 +691,14 @@
         ctx.save();
         ctx.translate(p.x, p.y);
         ctx.rotate(p.r);
-        ctx.globalAlpha = Math.max(0, Math.min(1, p.life/100));
+        ctx.globalAlpha = Math.max(0, Math.min(1, p.life/160));
         ctx.fillStyle = `hsl(${p.hue},90%,55%)`;
         ctx.fillRect(-p.s/2, -p.s/2, p.s, p.s*0.6);
         ctx.restore();
       });
 
-      if (t < 90){
+      // más lento (más frames)
+      if (t < 160){
         requestAnimationFrame(frame);
       } else {
         canvas.style.display = "none";
@@ -683,37 +706,6 @@
     }
     requestAnimationFrame(frame);
   }
-
-  // ===================== Wiring UI =====================
-  document.getElementById("btnFailTask").onclick = () => failTask();
-  document.getElementById("btnDownloadXLS").onclick = () => downloadExcelAuto();
-  document.getElementById("btnResetLog").onclick = () => { EVENTS.length = 0; alert("Log borrado."); };
-  document.getElementById("btnRestartTasks").onclick = () => {
-    taskIndex = 0;
-    TASK = null;
-    TASK_ACTIVE = false;
-    if (TIMER_INT) { clearInterval(TIMER_INT); TIMER_INT = null; }
-    CLICK_PATH = [];
-    for (const k of Object.keys(TASK_RESULTS)) delete TASK_RESULTS[k];
-    showNextTaskScreen();
-  };
-  document.getElementById("btnPause").onclick = () => pauseTask();
-  document.getElementById("btnResume").onclick = () => resumeTask();
-
-  document.getElementById("btnNextTask").onclick = () => nextTaskFlow();
-  document.getElementById("doneOverlay").onclick = (e) => {
-    if (e.target && e.target.id === "doneOverlay") nextTaskFlow();
-  };
-
-  document.getElementById("btnStartThisTask").onclick = () => startThisTaskNow();
-
-  document.getElementById("btnIntroStart").onclick = () => {
-    TEST_STARTED = true;
-    document.getElementById("taskIntroOverlay").style.display = "none";
-    document.getElementById("abpanel").style.display = "block";
-    taskIndex = 0;
-    showNextTaskScreen();
-  };
 
   // ============== Menu core ==============
   let menuTree = [];
@@ -727,6 +719,7 @@
   document.getElementById("closeBtn").onclick = () => toggleMenu(false);
   overlay.onclick = () => toggleMenu(false);
 
+  // Load data helpers
   const norm = (s) => String(s||"").normalize("NFD").replace(/[\u0300-\u036f]/g,"").toLowerCase().trim();
   const displayName = (name) => String(name||"").replace(/\s+Total\s*$/i,"").trim();
 
@@ -877,9 +870,16 @@
           if (isSuccessPath()) {
             TASK_DONE = true;
             const tms = effectiveElapsedMs();
-            TASK_RESULTS[TASK.id] = { status:"success", timeMs:tms };
-            track("task_success", { label: item.name, level, path: CLICK_PATH.join(" > ") });
-            showCompletedBanner("✅ Ruta correcta");
+            const status = isInefficient() ? "success_inefficient" : "success";
+
+            TASK_RESULTS[TASK.id] = { status, timeMs:tms, clicks: CLICK_PATH.length };
+            track("task_success", { label: item.name, level, path: CLICK_PATH.join(" > "), inefficient: status === "success_inefficient" });
+
+            if (status === "success_inefficient") {
+              showCompletedBanner("✅ Ruta correcta (con desvíos)", "🟡 Correcta con desvíos");
+            } else {
+              showCompletedBanner("✅ Ruta correcta", "🟢 Tarea completada");
+            }
           }
         }
 
@@ -915,19 +915,8 @@
     drawer.style.width = Math.min(count * 330, window.innerWidth * 0.95) + "px";
   }
 
-  // Panel wiring
+  // ===================== UI wiring =====================
   document.getElementById("btnFailTask").onclick = () => failTask();
-  document.getElementById("btnDownloadXLS").onclick = () => downloadExcelAuto();
-  document.getElementById("btnResetLog").onclick = () => { EVENTS.length = 0; alert("Log borrado."); };
-  document.getElementById("btnRestartTasks").onclick = () => {
-    taskIndex = 0;
-    TASK = null;
-    TASK_ACTIVE = false;
-    if (TIMER_INT) { clearInterval(TIMER_INT); TIMER_INT = null; }
-    CLICK_PATH = [];
-    for (const k of Object.keys(TASK_RESULTS)) delete TASK_RESULTS[k];
-    showNextTaskScreen();
-  };
   document.getElementById("btnPause").onclick = () => pauseTask();
   document.getElementById("btnResume").onclick = () => resumeTask();
   document.getElementById("btnNextTask").onclick = () => nextTaskFlow();
@@ -940,7 +929,7 @@
     showNextTaskScreen();
   };
 
-  // Init
+  // ===================== Start =====================
   showMainIntro();
   loadAllData();
 </script>
